// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styled should snapshot 1`] = `
.c0 {
  min-height: 250px;
  min-width: 250px;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: dodgerblue;
  border-radius: 99999px;
  color: aliceblue;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-family: Arial,Helvetica,sans-serif;
  font-size: 1em;
  height: 10em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 0.5s cubic-bezier(0.68,-0.55,0.265,1.55);
  transition: all 0.5s cubic-bezier(0.68,-0.55,0.265,1.55);
  width: 10em;
}

<div>
  <div
    class="c0"
  >
    <div
      id="slider"
    />
    <div
      class="c1"
      font-size="1"
    >
      awesome circle
    </div>
  </div>
</div>
`;

exports[`Styled when changing slider max should update styles 1`] = `
.c0 {
  min-height: 250px;
  min-width: 250px;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: dodgerblue;
  border-radius: 99999px;
  color: aliceblue;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-family: Arial,Helvetica,sans-serif;
  font-size: 1.5em;
  height: 10em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 0.5s cubic-bezier(0.68,-0.55,0.265,1.55);
  transition: all 0.5s cubic-bezier(0.68,-0.55,0.265,1.55);
  width: 10em;
}

<div>
  <div
    class="c0"
  >
    <div
      id="slider"
    />
    <div
      class="c1"
      font-size="1.5"
    >
      awesome circle
    </div>
  </div>
</div>
`;

exports[`Styled when changing slider min should update styles 1`] = `
.c0 {
  min-height: 250px;
  min-width: 250px;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: dodgerblue;
  border-radius: 99999px;
  color: aliceblue;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-family: Arial,Helvetica,sans-serif;
  font-size: 0.75em;
  height: 10em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 0.5s cubic-bezier(0.68,-0.55,0.265,1.55);
  transition: all 0.5s cubic-bezier(0.68,-0.55,0.265,1.55);
  width: 10em;
}

<div>
  <div
    class="c0"
  >
    <div
      id="slider"
    />
    <div
      class="c1"
      font-size="0.75"
    >
      awesome circle
    </div>
  </div>
</div>
`;
